[gd_scene load_steps=10 format=3 uid="uid://bda7mol8b1dbo"]

[ext_resource type="PackedScene" uid="uid://0eylbqrkfcsh" path="res://src/components/collider_detector.tscn" id="1_44esr"]
[ext_resource type="Texture2D" uid="uid://dkenseujuv7a1" path="res://assets/enemies/gaint_dragonfly.png" id="1_gxes3"]
[ext_resource type="PackedScene" uid="uid://dxoarw6w1dm6h" path="res://src/components/health_container.tscn" id="1_itf72"]
[ext_resource type="Script" path="res://src/enemies/giant_dragonfly.gd" id="1_r1s8r"]
[ext_resource type="PackedScene" uid="uid://cnmy034x62h8s" path="res://src/components/hurt_box.tscn" id="3_d6xc4"]
[ext_resource type="PackedScene" uid="uid://dr6f73vjifb6k" path="res://src/components/motion_controller.tscn" id="3_flpor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3yxi0"]
radius = 300.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uf1rn"]
radius = 7.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mio1n"]
size = Vector2(13, 19)

[node name="GiantDragonfly" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_r1s8r")

[node name="HealthContainer" parent="." instance=ExtResource("1_itf72")]
max_health = 15.0

[node name="MotionController" parent="." instance=ExtResource("3_flpor")]
unique_name_in_owner = true
friction = 2000.0
max_speed = 150.0
acc_mag = 2000.0

[node name="ColliderDetector" parent="." instance=ExtResource("1_44esr")]
unique_name_in_owner = true
collision_layer = 0
detect_area = false
detect_character_body = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderDetector"]
visible = false
shape = SubResource("CircleShape2D_3yxi0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gxes3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_uf1rn")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_container") instance=ExtResource("3_d6xc4")]
collision_layer = 0
health_container = NodePath("../HealthContainer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_mio1n")

[connection signal="health_depleted" from="HealthContainer" to="." method="_on_health_container_health_depleted"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
